Css/style.css
/* ... */
.header_body {
    display: flex;
    align-items: center;
}
/* Nav mobile */
.nav_button-mobile{
    width: 28px;
    height: 28px;
    display: none;
    position: absolute;
    top: 30px;
    left: 10px;
}
.nav_button-mobile i{
    transition: font-size 1s ease;
}
.nav_button-mobile i:hover{
    font-size: 30px;
}
#nav_mobile_input{
    display: none;
}
#nav_mobile_input:checked ~ .nav_overlay{
    display: block;
    
}
#nav_mobile_input:checked ~ .nav_mobile{
    transform: translateX(0);
    opacity: 1;
}
.nav_mobile{
    position: fixed;
    right: 0;
    top: 0;
    bottom: 0;
    left: 0;
    width: 320px;
    max-width: 100%;
    background-color: white;
    opacity: 0;
    transition: all 0.5s ease;
    z-index: 100;
    transform:translateX(-100%)
    
    
    
}
.nav_mobile-list{
    margin-top: 24px;
}
.nav_mobile-item{
    display: block;
    padding: 16px 16px;
    color: #333;
    font-size: 2.2rem;
    border-bottom: solid 1px ;
    
}
.nav_mobile--close{
    float: right;
    padding-left: 20px;
    padding-right: 20px;
}
.nav_mobile--close i{
    font-size: 25px;
    color: #818181;
}
/* nav-overlay */
.nav_overlay{
    position:fixed ;
    right: 0;
    top: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.75);
    display: none;
}

/* Nav pc */
#nav_pc
 {
    margin-left: 20px;
    opacity: 1;
    
}
.nav_block-list {
    display: flex;

    align-items: center;
}
.nav-item {
    padding: 20px;
    position: relative;
    border-radius: 10px;
}
.nav-title {
    color: #000000;
    font-family: "Lato", sans-serif;
    font-size: 1.2rem;
    font-style: normal;
    font-weight: 600;
    letter-spacing: 2px;
    text-transform: uppercase;
}

.nav-sub-list {
    box-shadow: 3px 3px 7px -2px rgba(0, 0, 0, 0.75);
    position: absolute;
    width: 120px;
    top: 55px;
    z-index: 2;
    display: none;
    transition: all 1s ease;
}
.nav-sub-item:hover {
    background-color: #27c9e2db;
}
.nav-sub-list a {
    display: block;
    padding: 10px;
    color: var(--primary-desc);
}

.logo_header {
    position: relative;
    left: 5%;
    
    margin-top: 20px;
}
.logo_header img{
    object-fit: cover;
    height: 92px;
    width: 250px;
    
}
.header_cta {
    position: relative;
    left: 77.5%;
    transition: all 125ms ease;
   
}

/* Wrapper */
.wrapper {
    position: relative;
    flex-direction: column;
    display: flex;
    height: 100vh;
    width: 100%;
}
/*-----Hero Block---- */
#hero_block {
    position: absolute;
    width: 100%;
    height: 100%;
    
}

.hero-body {
    padding-top: 120px;
    justify-content: space-between;
}

.hero_information {
    margin-left: 30px;
    justify-content: space-between;
}

.slideshow_container {
    position: absolute;
    
    width: 100%;
    height: 100vh;
}
.slideshow-image {
    position: absolute;
    top: 0%;
    right: 0%;
    opacity: 1;
    transition: opacity 0.5s ease;
}
.slideshow-image img {
    height: 100vh;
    object-fit: cover;
}

.slideshow-navigation {
    position: absolute;
    display: flex;
}
.button-slideshow-navigation {
    position: absolute;
    display: flex;
    width: 100%;
    justify-content: space-between;
    top: 40%;
}
.button-slideshow-navigation img {
    padding: 20px;
    cursor: pointer;
    z-index: 2;
}

.show {
    opacity: 1;
}
.hero-cta {
    margin-top: 50px;
}

.link-social-media {
    position: fixed;
    top: 50%;
    right: 2%;
    width: 50px;
    z-index: 3;
}
.hero-main-title {
    font-family: var(--primary-h1);
    font-style: italic;
    padding-top: 5%;
    font-weight: 500;
    font-size: 6rem;
    line-height: 1.19;
    color: var(--primary-h1);
    margin-left: -50px;
}
.hightlight{
    font-size: 12rem;
}

.hero-title {
    width: 50%;
}

.hero-social-media {
    display: flex;
    flex-direction: column;
}
@media only screen and (max-width: 1023px) {
    .nav_button-mobile {
        display: block;
    }
    #nav_pc {
        display: none;
    }
    .header_cta {
        display: none;
    }
    .logo_header {
    }
    .link-social-media {
        display: none;
    }
    #header_block {
        background: #ffffff5e;
    }
    .hero-main-title {
        font-size: 2.5rem;
        margin-left: 0;
        padding-top: 0;
    }
    .hero-title{
        width: 100%;
    }
    .hero-cta{
        margin-top: 20px;
    }
    .slideshow-image img{
        height: 40vh;
    }
    .slideshow_container {
        width: 90%;
        top: 60%;
    }
    .hightlight{
        font-size: 8rem;
    }
    .hero-title .desc{
        display: -webkit-box; -webkit-box-orient: vertical; overflow: hidden; -webkit-line-clamp: 2;line-clamp: 2; 
    }
    #hero_block{
        text-align: center;
    }
    .slideshow_container{
        width: 95%;
      height: 30vh;
      top: 22em;
    }
}
/* Blog Salon */
#blog_block {
}
.blog-item2,
.blog-item {
    display: flex;
    flex-direction: row;
}
.blog-img img {
    max-width: 100%;
    vertical-align: middle;
}

.blog-content {
    text-align: center;
    background-image: url(../img/background\ Blog\ Title.png);
    background-repeat: no-repeat;
    padding: 100px 0;
    flex: 0 0 50%;
    background-position-y: 135%;
    background-position-x: 80%;
}
.blog-content span {
    color: #818181;
    font-family: "Cormorant", sans-serif;
    font-size: 17px;
    line-height: 23px;
    font-style: normal;
    font-weight: 400;
    letter-spacing: 0px;
    text-transform: none;
}
.blog-content h3 {
    color: #000000;
    font-family: "Lato", sans-serif;
    font-size: 3.4rem;
    line-height: 40px;
    font-style: normal;
    font-weight: 200;
    letter-spacing: 0px;
    text-transform: uppercase;
}

/* Popular */
#Popular_block {
    background-repeat: no-repeat;
    background-size: cover;
    height: 1000px;
    position: relative;
}
.blog-item2 .desc {
    text-align: center;
}

.head_popular {
    padding-top: 130px;
    justify-content: space-between;
}
.head_popular-content {
    margin: auto;
}
/* ... */

